# ipl configure.in (borrowed and modified from ivtools)

# initialize autoconf
AC_INIT(configure.in)
AC_CONFIG_AUX_DIR(src/scripts)
# set the canonical host vars
AC_CANONICAL_HOST

case "$host" in
    *darwin* ) platform_part=darwin ;; 
    *freebsd2.1.* ) platform_part=freebsd2.1 ;;
    *hpux*10*20) platform_part=hpux10.20 ;;
    *hpux* ) platform_part=hpux ;;
    *linux* ) platform_part=linux ;;
    m88k-*-sysv4 ) platform_part=m88k-sysv4 ;;
    m88k-*-sysv3 ) platform_part=m88k-sysv3 ;;
    *osf1*V3.0 ) platform_part=alpha3.0 ;;
    *osf1*V3.2 | alpha*dec*osf*3.2 ) platform_part=alpha3.2 ;;
    *osf4.0* ) platform_part=alpha4 ;;
    *sgi*-irix*5* ) platform_part=irix5 ;;
    *sgi*-irix*6* ) platform_part=irix6 ;;
    *sco3.2v4* ) platform_part=sco3.2.4 ;;
    *solaris*) platform_part=solaris ;;
    *sunos4* ) platform_part=sunos4 ;;
    *) platform_part=default ;;
esac


AC_ARG_WITH(ace,[  --with-ace=<path>    Path to ACE include files],
	ACE=$withval
	if test -f $ACE/ace/ACE.h ; then
		AC_MSG_RESULT( Found ace/ACE.h in $ACE )
	else
		AC_MSG_ERROR( Can not find ace/ACE.h in $ACE given with option --with-ace=$ACE )
	fi
)

AC_ARG_WITH(ace-libs,[  --with-ace-libs=<path>    Path to ACE libraries],
	ACE_LIBS=$withval
)

ACE_ENABLED=0
if test x"$ACE" = x; then
	echo ""
	echo "No ACE path specified."
	echo "Use --with-ace=<path> to point to ACE installed directory."
	echo ""
else
	echo "Building with ACE support ACE=$ACE"
	if test -f $ACE_LIBS/libACE.a -o -f $ACE_LIBS/libACE.so -o -f $ACE_LIBS/libACE.dylib ; then
		AC_MSG_RESULT( Found libACE.* in $ACE_LIBS )
	        ACE_ENABLED=1
	else
	        if test -f $ACE/ace/libACE.a -o -f $ACE/ace/libACE.so -o -f $ACE/ace/libACE.dylib ; then
			AC_MSG_RESULT( Found libACE.* in $ACE/ace )
		        ACE_ENABLED=1
			ACE_LIBS=$ACE/ace
	        else
			AC_MSG_ERROR( Can not find libACE.a or libACE.so or libACE.dylib in $ACE_LIBS ($ACE).
			Use --with-ace-libs to specify location of ACE )
	        fi

	fi
fi


IVTOOLS_ENABLED=0
IVTOOLS=""
IVTOOLSLIBS=""
IVTOOLS_USE_INSTALLED=0
AC_ARG_WITH(ivtools,     [  --with-ivtools=<path>    path to ivtools include files],
        IVTOOLS=$withval
	
	if test x"$IVTOOLSLIBS" = x
	then
		if test -d "$IVTOOLS"/lib
		then
			IVTOOLSLIBS=$IVTOOLS/lib
		fi
	fi
)

AC_ARG_WITH(ivtools-libs,[  --with-ivtools-libs=<path> path to compiled ivtools libs],
	IVTOOLSLIBS=$withval )

## Check ivtools

if test x"$IVTOOLS" = x
then
	echo ""
	echo "No ivtools path specified."
	echo "Use --with-ivtools=<path> to point to ivtools installed directory."
else
   if test ! -f "$IVTOOLS/src/OverlayUnidraw/oved.h"
   then
	if test ! -f "$IVTOOLS/include/OverlayUnidraw/oved.h"
	then
	    echo ""
	    echo "Verify your ivtools environment and try it again."
	    echo "(Couldn't find $IVTOOLS/src/OverlayUnidraw/oved.h or" 
	    echo "$IVTOOLS/include/OverlayUnidraw/oved.h!)"

	    echo "Use --with-ivtools=<path> to point to ivtools (or set it in the env)."
            echo "<path> points to the installed ivtools version or to a source tree."
	    echo "You may also use --with-ivtools-libs to specify the lib directory."
	else
	    IVTOOLSINCS="$IVTOOLS"
	    IVTOOLS_USE_INSTALLED=1
	    echo "Found installed copy of ivtools"
	fi
   else
	IVTOOLSINCS="$IVTOOLS/src"
	echo "Found source tree copy of ivtools"
   fi

   if test ! -d "$IVTOOLSLIBS"
   then
        echo "ivtools directory '$IVTOOLSLIBS' does not exist (or is not readable)."
        echo "Use --with-ivtools-libs to point to it."
   fi
   echo "Building with ivtools support"
   echo "IVTOOLS includes = $IVTOOLSINCS"
   echo "IVTOOLS libs = $IVTOOLSLIBS"
   IVTOOLS_ENABLED=1
fi

# check of the c++ compiler
AC_PROG_CXX
# check for the c compiler
AC_PROG_CC
# check for CPP
AC_PROG_CXXCPP
# check for ranlib
AC_PROG_RANLIB
# check for X paths
AC_PATH_X
# check for bool support in c++
#AC_CXX_BOOL
# check for c++ standard headers
#AC_CXX_HEADERS
#ICE_CXX_INCLUDE_DIR
# check for EGCS or gcc 2.8.x
#AC_CXX_EGCS
# check for gettimeofday
#AC_TWO_ARG_TIMEOFDAY
# check for libstdc++
AC_CHECK_LIB(stdc++,peek__7istream,LIBSTDCPLUSPLUS2=1,LIBSTDCPLUSPLUS2=0)
AC_CHECK_LIB(stdc++,_ZNSi4peekEv,LIBSTDCPLUSPLUS3=1,LIBSTDCPLUSPLUS3=0)

# check for bigendian
#AC_C_BIGENDIAN
#if test $ac_cv_c_bigendian = yes; then
#AC_DEFINE(WORDS_BIGENDIAN)
#else
#AC_DEFINE(WORDS_LITTLEENDIAN)
#fi

# check for lex or flex
#AC_PROG_LEX

# leave these out for the mo -awf
# AC_CXX_DEFAULT_TEMPLATE_ARGUMENTS
# AC_CXX_ANSI_TEMPLATE_INSTANTIATION

# set up for include of fragments
if test "$GXX" = "yes"
then
    cc_part="gcc"
else
    cc_part=""
fi

if test "$CXX" = "egcs"
then
    cc_part=""
fi

if test "$cc_part" != ""
then
    host_frag=$platform_part-$cc_part.mk
    host_fragd=$platform_part-$cc_part.defs
else
# strip spaces from compiler name
    host_frag=$platform_part-`echo $CXX | sed "s/ //g"`.mk
    host_fragd=$platform_part-`echo $CXX | sed "s/ //g"`.defs
fi

if test -f config/$host_frag; then
  AC_MSG_RESULT( found config/$host_frag )
else
  AC_MSG_RESULT( no config/$host_frag this must be a new architecture.)
  AC_MSG_ERROR( please create config/$host_frag.)
fi


#AC_ARG_WITH(build-tree,[ --with-build-tree=<path>   path to put object files in],
#	echo build in $withval;	BUILD_TREE=$withval)

AC_ARG_ENABLE(install-relative,[ --enable-install-relative[=ARG]	enable installation relative to the source tree], INSTALLRELATIVE=YES, INSTALLRELATIVE=NO)

AC_ARG_ENABLE(use-rpath,[ --enable-use-rpath[=ARG]	enable use of -rpath when linking], USERPATH=YES, USERPATH=NO)


AC_ARG_ENABLE(install-subdir,[ --enable-install-subdir[=ARG]	enable installation in an ivtools sub-directory], INSTALLSUBDIR=YES, INSTALLSUBDIR=NO)

AC_TYPE_SOCKLEN_T

AC_SUBST(prefix)
AC_SUBST(OPENGL)
#AC_SUBST(XGL)
#AC_SUBST(TCL)
#AC_SUBST(CXX_HDRDIR)
AC_SUBST(CXX_INCLUDE_DIR)
AC_SUBST(LIBSTDCPLUSPLUS2)
AC_SUBST(LIBSTDCPLUSPLUS3)
AC_SUBST(x_includes) 
AC_SUBST(x_libraries)
#AC_SUBST(BUILD_TREE)
AC_SUBST(DEFS)
AC_SUBST(ACE)
AC_SUBST(ACE_LIBS)
AC_SUBST(ACE_ENABLED)
AC_SUBST(CLIPPOLY)
AC_SUBST(CLIPPOLY_LIBS)
AC_SUBST(CLIPPOLY_ENABLED)
AC_SUBST(IVTOOLSLIBS)
AC_SUBST(IVTOOLSINCS)
AC_SUBST(IVTOOLS_ENABLED)
AC_SUBST(IVTOOLS_USE_INSTALLED)
#AC_SUBST(IV)
#AC_SUBST(IV_LIBS)
#AC_SUBST(no_x)
AC_SUBST(NO_BOOL)
AC_SUBST(PWD)
AC_SUBST(INSTALLRELATIVE)
AC_SUBST(USERPATH)
AC_SUBST(INSTALLSUBDIR)
AC_SUBST(ac_cv_type_socklen_t)

#output to config-$host_fragd 
PWD=`pwd`;export PWD
AC_OUTPUT(config/config-$host_fragd:config/config.defs.in)

#output other stuff to config.mk
echo
echo writing constants to be pulled in by each Makefile from config/config.mk:
echo writing \"XCONFIGDIR = $x_libraries/X11/config\"
echo XCONFIGDIR = $x_libraries/X11/config >config/config.mk
echo writing \"ABSTOP = `pwd`\"
echo ABSTOP = `pwd` >>config/config.mk
echo writing \"CPU = `make CPU`\"
echo CPU = `make CPU` >>config/config.mk
echo writing \"LIBSTDCPLUSPLUS2 = $LIBSTDCPLUSPLUS2\"
echo LIBSTDCPLUSPLUS2 = $LIBSTDCPLUSPLUS2 >>config/config.mk
echo writing \"LIBSTDCPLUSPLUS3 = $LIBSTDCPLUSPLUS3\"
echo LIBSTDCPLUSPLUS3 = $LIBSTDCPLUSPLUS3 >>config/config.mk
echo
echo "now do a \"make\""
echo



